# Kinea

./: .env.example  .gitignore  .pre-commit-config.yaml  DELIVERY.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: diagnose-centralization.yml  format-centralization.yml  source-contract.yml  validate.yml
.streamlit/: config.toml
config/: series.json
dashboard/: app.py
evidence/: as_of_demo.txt  as_of_diff.txt  data_quality.txt  database_counts.txt  error_log.txt  feature_panel.csv  idempotency.txt  kinea.db  live_validation.json  live_validation.txt  log_error.txt  log_success.txt  pit_panel.csv  pit_panel.parquet  publication_lag.txt  revision_demo.db  revision_demo.txt  sample_query.sql  sample_query_output.csv  sample_query_output.txt  schema.sql  source_health.txt  success_log.txt  validation_report.txt
fixtures/contracts/: EXR.D.CZK.EUR.SP00.A.csv  HICP.M.CZ.N.FOOD00.4D0.INX.csv  HICP.M.CZ.N.NRGY00.4D0.INX.csv  HICP.M.CZ.N.SERV00.4D0.INX.csv  HICP.M.CZ.N.XEF000.4D0.INX.csv
fixtures/v1/: EXR.D.CZK.EUR.SP00.A.csv  HICP.M.CZ.N.FOOD00.4D0.INX.csv  HICP.M.CZ.N.NRGY00.4D0.INX.csv  HICP.M.CZ.N.SERV00.4D0.INX.csv  HICP.M.CZ.N.XEF000.4D0.INX.csv
fixtures/v2/: EXR.D.CZK.EUR.SP00.A.csv  HICP.M.CZ.N.FOOD00.4D0.INX.csv  HICP.M.CZ.N.NRGY00.4D0.INX.csv  HICP.M.CZ.N.SERV00.4D0.INX.csv  HICP.M.CZ.N.XEF000.4D0.INX.csv
kinea/: __init__.py  analytics.py  archive.py  cli.py  client.py  collector.py  config.py  db.py  econometrics.py  exports.py  features.py  health.py  identifiers.py  locking.py  models.py  panels.py  parser.py  quality.py  transforms.py  vintages.py
scripts/: capture_dashboard_screenshots.py  check_source_contract.py  demo_revision.py  generate_dashboard_previews.py  generate_evidence.py  make_fixtures.py  validate_delivery.py
tests/: test_analysis_cli.py  test_analytics.py  test_archive.py  test_client.py  test_collector.py  test_config.py  test_contracts.py  test_dashboard.py  test_db.py  test_econometrics.py  test_exports.py  test_features.py  test_hardening.py  test_health.py  test_identifiers.py  test_locking.py  test_metadata.py  test_panels.py  test_parser.py  test_quality.py  test_scripts.py  test_transforms.py  test_vintages.py  test_vintages_properties.py
