[project]
name = "kinea-collector"
version = "2.0.0"
description = "Vintage-aware, idempotent collector for ECB SDMX series (Czech HICP + EUR/CZK)"
requires-python = ">=3.11"
# The collector itself has no third-party runtime dependencies.
dependencies = []

[project.optional-dependencies]
dashboard = ["streamlit==1.59.2", "altair==6.2.2", "pandas==3.0.3"]
dev = ["pytest==9.1.1", "matplotlib==3.10.8"]

[project.scripts]
kinea = "kinea.cli:main"

[tool.setuptools]
packages = ["kinea"]

[tool.pytest.ini_options]
testpaths = ["tests"]
