[project]
name = "kinea-collector"
version = "2.0.0"
description = "Vintage-aware, idempotent collector for ECB SDMX series (Czech HICP + EUR/CZK)"
requires-python = ">=3.11"
# The collector itself has no third-party runtime dependencies.
dependencies = []

[project.optional-dependencies]
dashboard = ["streamlit==1.59.2", "altair==6.2.2", "pandas==3.0.3"]
modeling = ["pandas==3.0.3", "pyarrow==24.0.0"]
dev = [
    "pytest==9.1.1",
    "matplotlib==3.10.8",
    "ruff==0.15.22",
    "hypothesis==6.156.9",
]

[project.scripts]
kinea = "kinea.cli:main"

[tool.setuptools]
packages = ["kinea"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]
